[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/GameUI/InteractableUI/InteractionsPanel/InteractionsPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/MainUI/SmallFontLightTheme.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/GameUI/InteractableUI/InteractableButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/GameUI/InteractableUI/TravelUI/TravelUI.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/GameUI/InteractableUI/InteractablesPanel.gd" type="Script" id=13]
[ext_resource path="res://Scenes/MainUI/TinyFont.tres" type="DynamicFont" id=28]
[ext_resource path="res://Scenes/MainUI/DarkPanel/DarkPanel.tscn" type="PackedScene" id=29]
[ext_resource path="res://Assets/Icons/position-marker_white.png" type="Texture" id=30]

[node name="InteractablesPanel" type="Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -150.0
margin_bottom = 220.0
rect_min_size = Vector2( 150, 220 )
theme = ExtResource( 2 )
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}
current_interaction = 7

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DarkPanel" parent="VBoxContainer" instance=ExtResource( 29 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 150.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 22 )

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/DarkPanel"]
margin_left = 2.0
margin_top = 3.0
margin_right = 18.0
margin_bottom = 19.0
texture = ExtResource( 30 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LocationLabel" type="Label" parent="VBoxContainer/DarkPanel"]
margin_left = 20.0
margin_top = 6.0
margin_right = 146.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 28 )
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 22.0
margin_right = 150.0
margin_bottom = 221.0
size_flags_vertical = 3
custom_constants/margin_right = 2
custom_constants/margin_top = 1
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 4.0
margin_top = 1.0
margin_right = 148.0
margin_bottom = 195.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 144.0
margin_bottom = 194.0
size_flags_vertical = 3
custom_constants/separation = 4

[node name="ActionsContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 116.0
margin_bottom = 194.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/ActionsContainer"]
visible = false
margin_right = 116.0
margin_bottom = 12.0
custom_constants/margin_right = 0
custom_constants/margin_top = 4
custom_constants/margin_left = 0
custom_constants/margin_bottom = 8

[node name="InteractactionLabel" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/ActionsContainer/MarginContainer"]
margin_top = 4.0
margin_right = 116.0
margin_bottom = 13.0
size_flags_vertical = 3
align = 1
valign = 1
autowrap = true

[node name="InteractablesContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/ActionsContainer"]
margin_right = 116.0
margin_bottom = 96.0
rect_min_size = Vector2( 116, 0 )
size_flags_vertical = 3
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InteractableButton" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/ActionsContainer/InteractablesContainer" instance=ExtResource( 3 )]
visible = false

[node name="InteractableButton2" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/ActionsContainer/InteractablesContainer" instance=ExtResource( 3 )]
visible = false
margin_top = 17.0
margin_bottom = 32.0
focus_mode = 2

[node name="InteractableButton3" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/ActionsContainer/InteractablesContainer" instance=ExtResource( 3 )]
visible = false
margin_top = 34.0
margin_bottom = 49.0
focus_mode = 2

[node name="InteractableButton4" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/ActionsContainer/InteractablesContainer" instance=ExtResource( 3 )]
visible = false
margin_top = 51.0
margin_bottom = 66.0
focus_mode = 2

[node name="InteractableButton5" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/ActionsContainer/InteractablesContainer" instance=ExtResource( 3 )]
visible = false
margin_top = 68.0
margin_bottom = 83.0
focus_mode = 2

[node name="InteractableButton6" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/ActionsContainer/InteractablesContainer" instance=ExtResource( 3 )]
visible = false
margin_top = 68.0
margin_bottom = 83.0
focus_mode = 2

[node name="TravelUI" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/ActionsContainer" instance=ExtResource( 12 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 96.0
margin_right = 116.0
margin_bottom = 194.0

[node name="InteractionsPanel" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]

[connection signal="pressed_location" from="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/ActionsContainer/TravelUI" to="." method="_on_TravelUI_pressed_location"]
[connection signal="changed_interaction" from="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/InteractionsPanel" to="." method="_on_InteractionsPanel_changed_interaction"]
